[tool.poetry]
name = "repl_python3_beta_bank-sys"
version = "0.1.0"
description = ""
authors = ["Arda <mail@ardacoskun.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
